@@ -25,6 +25,7 @@ import javafx.event.ActionEvent;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import java.awt.event.MouseEvent;
 import java.io.File;
 import java.io.IOException;
 
@@ -41,9 +42,10 @@ public class TableroController {
         return datos;
     }
 
-    public void setDatos(DatosJuego datos){
+    public void setDatos(DatosJuego datos) {
         this.datos = datos;
     }
+
     public ZombieStudentsLife getZombieStudentsLife() {
         return zombieStudentsLife;
     }
@@ -51,12 +53,16 @@ public class TableroController {
     public void setZombieStudentsLife(ZombieStudentsLife zombieStudentsLife) {
         this.zombieStudentsLife = zombieStudentsLife;
     }
+
     public TableroController(DatosJuego datos, ZombieStudentsLife zombieStudentsLife) {
         this.datos = datos;
         this.zombieStudentsLife = zombieStudentsLife;
     }
-    public TableroController() {}
-    private void avanzarZombieStudentsLife (boolean unTurno, Celda celda) {
+
+    public TableroController() {
+    }
+
+    private void avanzarZombieStudentsLife(boolean unTurno, Celda celda) {
         if (Window.getWindows().size() < 3) {
             if (Window.getWindows().size() > 1) {
                 Stage ventanaCelda = (Stage) Window.getWindows().get(1);
@@ -72,14 +78,14 @@ public class TableroController {
 
     @FXML
     protected void onBottonPausarClick(ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         datos.setPausado(true);
     }
 
     @FXML
     protected void onBottonPasarDeTurnoClick(ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         if (datos.isPausado()) {
             avanzarZombieStudentsLife(true, celda);
@@ -88,7 +94,7 @@ public class TableroController {
 
     @FXML
     protected void onBottonReanudarClick(ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         if (getDatos().isPausado()) {
             datos.setPausado(false);
@@ -98,7 +104,7 @@ public class TableroController {
 
     @FXML
     protected void onBottonConfiguracionToClick(ActionEvent event) throws IOException {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         datos.setPausado(true);
         FXMLLoader loader = new FXMLLoader(getClass().getResource("Personalizacion2.fxml"));
@@ -106,11 +112,11 @@ public class TableroController {
         XPersonalizacionController controller = loader.getController();
         controller.setControllerValues(datos);
         Stage stage = new Stage();
-        Stage ventanaTablero = ((Stage) Window.getWindows().getFirst());
+        Stage ventanaTablero = ((Stage) Stage.getWindows().get(0));
         stage.initOwner(ventanaTablero);
         stage.setResizable(false);
-        if (Window.getWindows().size() > 1) {
-            Stage ventanaCelda = (Stage) Window.getWindows().get(1);
+        if (Stage.getWindows().size() > 1) {
+            Stage ventanaCelda = (Stage) Stage.getWindows().get(1);
             ventanaCelda.close();
         }
         Scene scene = new Scene(root);
@@ -120,28 +126,28 @@ public class TableroController {
 
     @FXML
     protected void onBottonCerrarClick() {
-        ((Stage) Window.getWindows().getFirst()).close();
+        ((Stage) Stage.getWindows().get(0)).close();
     }
 
     @FXML
     protected void onBottonPantallaCompletaToClick() {
-        Stage pantalla = ((Stage) Window.getWindows().getFirst());
+        Stage pantalla = ((Stage) Stage.getWindows().get(0));
         pantalla.setFullScreen(!pantalla.isFullScreen());
     }
 
     @FXML
     protected void onBottonMinimizarClick() {
-        ((Stage) Window.getWindows().getFirst()).setIconified(true);
+        ((Stage) Stage.getWindows().get(0)).setIconified(true);
     }
 
     @FXML
     protected void onBottonMenuInicialClick(ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         if (!getDatos().isSave() && datos.isPausado()) {
-            if (Window.getWindows().size() > 1) ((Stage) Window.getWindows().get(1)).close();
+            if (Stage.getWindows().size() > 1) ((Stage) Stage.getWindows().get(1)).close();
             Alert confirmacion = new Alert(Alert.AlertType.CONFIRMATION);
-            confirmacion.initOwner(Stage.getWindows().getFirst());
+            confirmacion.initOwner(Stage.getWindows().get(0));
             confirmacion.setTitle("Volver al menú inicial");
             confirmacion.setHeaderText("Estás a punto de volver al menú inicial y perderás todo tu progreso guardado");
             confirmacion.setContentText("¿Deseas guardar la partida antes de salir?");
@@ -167,7 +173,7 @@ public class TableroController {
     private void volverAlMenuInicial(ActionEvent event) {
         try {
             FXMLLoader fxmlLoader = new FXMLLoader(ApplicationMenuInicial.class.getResource("MenuInicial.fxml"));
-            Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
+            Stage stage = (Stage) ((Parent) event.getSource()).getScene().getWindow();
             Scene scene = new Scene(fxmlLoader.load());
             stage.setTitle("ZombieStudentsLife");
             stage.setScene(scene);
@@ -180,14 +186,14 @@ public class TableroController {
 
     @FXML
     protected void onBottonGuardarPartidaClick(ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         guardarPartida(event);
     }
 
     @FXML
     protected void onBottonGuardarComoClick(ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         guardarComo(event);
     }
@@ -204,15 +210,15 @@ public class TableroController {
 
     protected void guardarComo(ActionEvent event) {
         TextInputDialog getArchivoNombre = new TextInputDialog();
-        getArchivoNombre.initOwner(Stage.getWindows().getFirst());
+        getArchivoNombre.initOwner(Stage.getWindows().get(0));
         getArchivoNombre.setTitle("Guardar partida");
         getArchivoNombre.setHeaderText("Nombre de la partida:");
         getArchivoNombre.setContentText("Guardar como:");
         ButtonType botonGuardar = new ButtonType("Guardar", ButtonBar.ButtonData.OK_DONE);
         ButtonType botonCancelar = new ButtonType("Cancelar", ButtonBar.ButtonData.CANCEL_CLOSE);
         getArchivoNombre.getDialogPane().getButtonTypes().setAll(botonGuardar, botonCancelar);
-        String nombreArchivo = getArchivoNombre.showAndWait().get();
-        Label labelTurno = (Label) ((HBox) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(2)).getChildren().getFirst();
+        String nombreArchivo = getArchivoNombre.showAndWait().orElse(null);
+        Label labelTurno = (Label) ((AnchorPane) ((Parent) event.getSource()).getScene().getRoot()).getChildrenUnmodifiable().get(2);
         String labelString = labelTurno.getText();
         int turnoActual = Integer.parseInt(labelString.replace("Turno: ", ""));
         datos.setTurnoActual(turnoActual);
@@ -231,32 +237,15 @@ public class TableroController {
                 Scene scene = new Scene(celdaController.getRoot());
                 Stage stage = new Stage();
                 stage.setResizable(false);
-                Stage ventana = ((Stage) Window.getWindows().getFirst());
+                Stage ventana = ((Stage) Stage.getWindows().get(0));
                 stage.initOwner(ventana);
                 stage.setScene(scene);
-                int numeroVentanasAbiertas = 0;
-                for (Window window : Window.getWindows()) {
-                    numeroVentanasAbiertas++;
-                }
+                int numeroVentanasAbiertas = Stage.getWindows().size();
                 if (numeroVentanasAbiertas > 1) {
-                    Stage ventanaPreviaCelda = ((Stage) Window.getWindows().get(1));
-                    String textoLabelVentana = ((Label) ((GridPane) ((VBox) ventanaPreviaCelda.getScene().getRoot()).getChildren().getFirst()).getChildren().getFirst()).getText();
+                    Stage ventanaPreviaCelda = ((Stage) Stage.getWindows().get(1));
+                    String textoLabelVentana = ((Label) ((GridPane) ((VBox) ventanaPreviaCelda.getScene().getRoot()).getChildren().get(0)).getChildren().get(0)).getText();
                     log.debug("Se ha cerrado la ventana de la celda " + textoLabelVentana.charAt(8) + ", " + textoLabelVentana.charAt(11));
                     ventanaPreviaCelda.close();
-                }
-                Bounds limitesCasilla = celda.getBoundsInLocal();
-                Bounds limitesEscenaCasilla = celda.localToScene(limitesCasilla);
-                Screen pantalla = Screen.getPrimary();
-                Rectangle2D limitesPantalla = pantalla.getBounds();
-                if (limitesEscenaCasilla.getMinX() < limitesPantalla.getWidth() / 2) {
-                    stage.setX(limitesEscenaCasilla.getMinX());
-                } else {
-                    stage.setX(limitesEscenaCasilla.getMinX() - 220 - celda.getPrefWidth());
-                }
-                if (limitesEscenaCasilla.getMinY() < limitesPantalla.getHeight() / 2) {
-                    stage.setY(limitesEscenaCasilla.getMinY() - 20);
-                } else {
-                    stage.setY(limitesEscenaCasilla.getMinY() - 240);
                 }
                 stage.show();
                 log.debug("Se ha pulsado la celda" + celda);
@@ -267,17 +256,17 @@ public class TableroController {
     }
 
     private GridPane crearGridTablero(Tablero tablero, Parent root) {
-        int filas = tablero.getFilas();
-        int columnas = tablero.getColumnas();
+        int filas = tablero.getNumFilas();
+        int columnas = tablero.getNumColumnas();
         GridPane gridTablero = new GridPane();
         gridTablero.setHgap(1);
         gridTablero.setVgap(1);
-        for (int i=0; i != filas; i++) {
-            for (int j=0; j != columnas; j++) {
+        for (int i = 0; i != filas; i++) {
+            for (int j = 0; j != columnas; j++) {
                 Celda celda = tablero.getCelda(i, j);
-                celda.setPrefHeight(((AnchorPane) root.getChildrenUnmodifiable().get(1)).getPrefHeight()/columnas);
-                celda.setPrefWidth(((AnchorPane) root.getChildrenUnmodifiable().get(1)).getPrefWidth()/filas);
-                ((Button) celda.getChildren().getFirst()).setOnAction(_ ->this.mostrarElementosCelda(celda));
+                celda.setPrefHeight(((AnchorPane) root.getChildrenUnmodifiable().get(1)).getPrefHeight() / columnas);
+                celda.setPrefWidth(((AnchorPane) root.getChildrenUnmodifiable().get(1)).getPrefWidth() / filas);
+                celda.getBotonCelda().setOnAction(event -> mostrarElementosCelda(celda));
                 gridTablero.add(celda, i, j);
             }
         }
@@ -285,14 +274,15 @@ public class TableroController {
     }
 
     protected void crearTablero(Tablero tablero) throws IOException {
-        Parent root = FXMLLoader.load(getClass().getResource("Tablero.fxml"));
+        FXMLLoader loader = new FXMLLoader(getClass().getResource("Tablero.fxml"));
+        Parent root = loader.load();
         GridPane gridTablero = this.crearGridTablero(tablero, root);
         ((AnchorPane) root.getChildrenUnmodifiable().get(1)).getChildren().add(gridTablero);
         AnchorPane.setTopAnchor(gridTablero, 0.0);
         AnchorPane.setRightAnchor(gridTablero, 0.0);
         AnchorPane.setBottomAnchor(gridTablero, 0.0);
         AnchorPane.setLeftAnchor(gridTablero, 0.0);
-        turnoLabel = (Label) ((HBox) root.getChildrenUnmodifiable().get(2)).getChildren().getFirst();
+        turnoLabel = (Label) ((AnchorPane) root.getChildrenUnmodifiable().get(2)).getChildren().get(0);
         zombieStudentsLife.getBucle().actualizarTurnoProperty();
         turnoLabel.textProperty().bind(zombieStudentsLife.getBucle().getTurnoProperty().asString("Turno: %d"));
         Stage stage = new Stage();
@@ -304,21 +294,22 @@ public class TableroController {
         stage.show();
         datos.setPausado(true);
         int numEstudiantes = datos.getEstudiantes().getNumeroElementos();
-        for (int k=0; k != numEstudiantes; k++) {
+        for (int k = 0; k != numEstudiantes; k++) {
             Estudiante estudiante = datos.getEstudiantes().getElemento(k).getData();
             Celda celda = tablero.getCelda(estudiante.getPosicionN(), estudiante.getPosicionM());
             celda.agregarEstudiante(estudiante, false);
             celda.getListaEstudiantes().add(estudiante);
         }
         int numRecursos = datos.getRecursos().getNumeroElementos();
-        for (int m=0; m!= numRecursos; m++) {
+        for (int m = 0; m != numRecursos; m++) {
             Recursos rec = datos.getRecursos().getElemento(m).getData();
             Celda celda = tablero.getCelda(rec.getPosicionN(), rec.getPosicionM());
             celda.agregarRecurso(rec, false);
             celda.getListaRecursos().add(rec);
         }
     }
-    private static TreeItem<Estudiante> crearArbolGenealogico (BST<Estudiante> arbol) {
+
+    private static TreeItem<Estudiante> crearArbolGenealogico(BST<Estudiante> arbol) {
         TreeItem<Estudiante> raiz = new TreeItem<>(arbol.getRaiz().getDato());
         if (arbol.getAltura() > 1) {
             crearArbolGenealogicoPrinc(arbol.getRaiz().getDerecha(), raiz);
@@ -327,7 +318,7 @@ public class TableroController {
         return raiz;
     }
 
-    private static void crearArbolGenealogicoPrinc (Nodo<Estudiante> nodo, TreeItem<Estudiante> raiz) {
+    private static void crearArbolGenealogicoPrinc(Nodo<Estudiante> nodo, TreeItem<Estudiante> raiz) {
         TreeItem<Estudiante> it = new TreeItem<>(nodo.getDato());
         raiz.getChildren().add(it);
         if (nodo.getDerecha() != null & nodo.getIzquierda() != null) {
@@ -335,14 +326,15 @@ public class TableroController {
             crearArbolGenealogicoPrinc(nodo.getIzquierda(), it);
         }
     }
+
     @FXML
-    protected void onBottonFinalizarPartidaClick (ActionEvent event) {
-        Celda celda = ((Celda) ((GridPane) ((AnchorPane) ((Node) event.getSource()).getScene().getRoot().getChildrenUnmodifiable().get(1)).getChildrenUnmodifiable().getFirst()).getChildren().getFirst());
+    protected void onBottonFinalizarPartidaClick(ActionEvent event) {
+        Celda celda = obtenerCeldaDeEvento(event);
         datos = celda.getDatos();
         if (!getDatos().isSave() && datos.isPausado()) {
-            if (Window.getWindows().size() > 1) ((Stage) Window.getWindows().get(1)).close();
+            if (Stage.getWindows().size() > 1) ((Stage) Stage.getWindows().get(1)).close();
             Alert conf = new Alert(Alert.AlertType.CONFIRMATION);
-            conf.initOwner(Stage.getWindows().getFirst());
+            conf.initOwner(Stage.getWindows().get(0));
             conf.setTitle("Finalizar partida");
             conf.setHeaderText("Estás a punto de salir de la partida, perderás el progreso");
             conf.setContentText("¿Quieres guardar la partida antes de salir?");
@@ -364,7 +356,8 @@ public class TableroController {
             terminarPartida(datos);
         }
     }
-    public static void terminarPartida (DatosJuego dato) {
+
+    public static void terminarPartida(DatosJuego dato) {
         ZombieStudentsLife juego = new ZombieStudentsLife(dato, true);
         juego.finalizarPartida();
         try {
@@ -378,7 +371,7 @@ public class TableroController {
             AnchorPane.setRightAnchor(paneGan, 0.0);
             Mapa<Estudiante, BST<Estudiante>> arbolGenealogico = juego.getArbolGenealogico();
             int numGan = dato.getEstudiantes().getNumeroElementos();
-            for (int i = 0; i != numGan; i ++) {
+            for (int i = 0; i != numGan; i++) {
                 Estudiante est = dato.getEstudiantes().getElemento(i).getData();
                 BST<Estudiante> arbol = arbolGenealogico.get(est);
                 TreeView<Estudiante> vistaGan = new TreeView<>();
@@ -396,7 +389,7 @@ public class TableroController {
                             setText(null);
                         } else {
                             if (estudiante != null) {
-                                setText(STR."Estudiante \{estudiante.getId()}");
+                                setText(String.format("Estudiante %d", estudiante.getId()));
                                 setFont(new Font("Bookman Old Style", 18));
                             }
                         }
@@ -405,9 +398,9 @@ public class TableroController {
                 paneGan.getChildren().add(vistaGan);
                 HBox.setHgrow(vistaGan, Priority.ALWAYS);
             }
-            while (!Window.getWindows().isEmpty()) {
-                ((Stage) Window.getWindows().getFirst()).close();
-            };
+            while (!Stage.getWindows().isEmpty()) {
+                ((Stage) Stage.getWindows().get(0)).close();
+            }
             Stage stage = new Stage();
             Scene scene = new Scene(root);
             stage.setScene(scene);
@@ -418,8 +411,18 @@ public class TableroController {
             log.error("No se ha podido encontrar el menú inicial");
         }
     }
+
     @FXML
-    protected void onBottonSalirClick (ActionEvent event) {
+    protected void onBottonSalirClick(ActionEvent event) {
         volverAlMenuInicial(event);
+    }
+
+    private Celda obtenerCeldaDeEvento(ActionEvent event) {
+        return (Celda) ((GridPane) ((AnchorPane) ((Parent) event.getSource()).getScene().getRoot()).getChildren().get(1)).getChildren().get(0);
+    }
+
+    public void inicializar(DatosJuego datos, ZombieStudentsLife zombieStudentsLife) {
+        this.datos = datos;
+        this.zombieStudentsLife = zombieStudentsLife;
     }
 }
